added twitter button!

--- a/pages/index.html
+++ b/pages/index.html
@@ -33,10 +33,15 @@
             <div id="credits">CREDITS #click me!</div>
             <img src="../assets/images (1).jpg"width="100%" />
           </div>
-          <div class="container">
-            <p>ScoreBoard</p>
-            <ul id="scores">
-            </ul>
+          <a href="https://twitter.com/share?text=<look at this dope game guys>"
+          target="_blank"
+          >
+          <img src="https://upload.wikimedia.org/wikipedia/en/thumb/9/9f/Twitter_bird_logo_2012.svg/945px-Twitter_bird_logo_2012.svg.png" class="img-responsive" width="50px" />
+        </a>
+        <div class="container">
+          <p>ScoreBoard</p>
+          <ul id="scores">
+          </ul>
         </div>
       </div>
     </div>
