ready to publish

--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
 <head>
   <link rel="stylesheet" href="../lib/bootstrap.css"/>
   <link rel="stylesheet" href="../assets/style.css"/>
-  <title>Jumpy Frog</title>
+  <title>Levi VS Titans</title>
 </head>
 
 <body>
@@ -12,7 +12,7 @@
     <div class="container" width="300%">
       <div class="jumbotron">
         <div class="container">
-          <h1>Welcome to Jumpy Frog!</h1>
+          <h1>Welcome to Levi VS Titans!</h1>
 
           <p id = "red">This game is a cooler parody of Flappy Bird</p>
           <div class="row">
@@ -28,6 +28,9 @@
               <li>SPACEBAR to jump</li>
               <li>Avoid the pipes</li>
               <li>If you die try again!</li>
+              <li>Get a higher score then the highest on the leaderboard to get on it</li>
+              <li>Gas increases spees and weight</li>
+              <li>Blades give you the ability to go through obstacles for 5 seconds</li>
             </ul>
 
             <div id="credits">CREDITS #click me!</div>
@@ -38,6 +41,7 @@
           >
           <img src="https://upload.wikimedia.org/wikipedia/en/thumb/9/9f/Twitter_bird_logo_2012.svg/945px-Twitter_bird_logo_2012.svg.png" class="img-responsive" width="50px" />
         </a>
+
         <div class="container">
           <p>ScoreBoard</p>
           <ul id="scores">
